[tool.poetry]
name = "davar"
version = "0.1.0"
description = "An experimental interpreted international auxiliary language."
authors = ["Impossibly New <newlyimpossible@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
arpeggio = "^1.9.2"
wikidata = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
black = "^19.10b0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
