[tool.poetry]
name = "davar"
version = "0.2.0"
description = "An experimental interpreted international auxiliary language."
authors = ["Impossibly New <newlyimpossible@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/impossiblynew/davar"
repository = "https://github.com/impossiblynew/davar"
keywords = ["language", "translation", "WikiData"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
    "Topic :: Text Processing :: Linguistic",
]

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
arpeggio = "^1.9.2"
wikidata = "^0.6.1"
nltk = "^3.5"
pycountry = "^19.8.18"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
black = "^19.10b0"
pylint = "^2.5.2"
rope = "^0.17.0"
sphinx = "^3.0.4"
sphinx-autoapi = "^1.3.0"
pyment = "^0.3.3"
sphinx-rtd-theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
